@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
   
 %:
-	dh ${@}
+	dh ${@} --parallel
 
 override_dh_installchangelogs:
 	dh_installchangelogs ChangeLog.txt
@@ -9,9 +9,6 @@ override_dh_installchangelogs:
 override_dh_fixperms:
 	find debian/*/usr/share/aptosid-manual -type f -exec chmod 0644 {} \;
 	dh_fixperms
-
-override_dh_builddeb:
-	dh_builddeb -- -Zxz -z9
 
 create-icons:
 	# requires inkscape and imagemagick to be installed
