@@ -2,6 +2,9 @@ aptosid-manual (02.16.2014.12.31-2) UNRELEASED; urgency=medium
 
   * NOT RELEASED YET
   * drop Breaks with ancient tools.
+  * drop explicit selection of xz to compress the packages, it's default now
+    anyways.
+  * allow parallel building.
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 01 Jan 2015 22:31:13 +0100
 
